--- a/css/for_image.css
+++ b/css/for_image.css
@@ -1,15 +1,15 @@
 .img-container {
     background-size: cover;
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: 536px;
+    background-image: url("../images/export.jpg");
+    background-position: center;
+    text-align: center;
+}
+.img-container h1{
     position: relative;
-}
-.img-container img{
-    width: 100%;
-    height: 100%;
-}
-.img-container h2{
-    position: absolute;
+    top: 495px;
+
 }
 body{
     background-color: beige;
