--- a/css/menu.css
+++ b/css/menu.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Arimo');
+*{
+    margin: 0;
+    padding: 0;
+}
 .top-menu {
   background: black;
   box-shadow: 3px 0 7px rgba(0,0,0,.3);
@@ -9,7 +13,6 @@
   display: table;
   clear: both;
 }
-.navbar-logo {display: inline-block;}
 .menu-main {
   list-style: none;
   float: right;
